--- a/goo-style.css
+++ b/goo-style.css
@@ -142,7 +142,7 @@ div h1{
 }
 .inform4{
 	text-align:justify;
-	display: inline-flex;
+	display:flex;
 	justify-self: space-between;
 	margin-top: 30px ;
 	padding-top: 30px ;
@@ -152,13 +152,13 @@ div h1{
 }
 .inf4-column{
 	margin-left: 40px;
-	display: inline-flex;
+	display:flex;
 	justify-self: space-around;
 	flex-direction: column;
 	align-items: center;
 }
 .ricks{
-	display: inline-flex;
+	display:flex;
 	justify-self: space-around;
 	flex-direction: row;
 	align-items: center;
